--- a/app/src/main/res/layout/activity_services_and_intentions.xml
+++ b/app/src/main/res/layout/activity_services_and_intentions.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ServicesAndIntentionsActivity">
+    tools:context=".view.ServicesAndIntentionsActivity">
 
     <Button
         android:id="@+id/buttonStart"
