--- a/app/src/main/res/layout/activity_shared_preferences.xml
+++ b/app/src/main/res/layout/activity_shared_preferences.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SharedPreferencesActivity">
+    tools:context=".view.SharedPreferencesActivity">
 
 </android.support.constraint.ConstraintLayout>
