--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -10,4 +10,7 @@
     <item android:id="@+id/settings"
         android:title="Settings"/>
 
+    <item android:id="@+id/anim"
+        android:title="@string/anim"/>
+
 </menu>
